// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input snapshots > css mode snapshot 1`] = `
"import React, { useId, useState, createContext, useContext } from 'react';
import styles from './Input.module.css';
export type InputVariant = 'default' | 'error';
export type InputSize    = 'sm' | 'md' | 'lg';

export interface InputProps extends Omit<React.InputHTMLAttributes<HTMLInputElement>, 'size'> {
  label?:    string;
  variant?:  InputVariant;
  size?:     InputSize;
  error?:    string;
  hint?:     string;
  required?: boolean;
}

interface InputContextValue {
  id: string;
  variant: InputVariant;
  size: InputSize;
  error?: string;
  hint?: string;
  required?: boolean;
  disabled?: boolean;
}

const InputContext = createContext<InputContextValue | undefined>(undefined);

const useInputContext = () => {
  const context = useContext(InputContext);
  if (!context) throw new Error('Input sub-components must be used within Input');
  return context;
};

export const InputRoot = ({
  children,
  variant = 'default',
  size = 'md',
  error,
  hint,
  required,
  disabled,
  id: providedId,
  className,
}: {
  children: React.ReactNode;
  variant?: InputVariant;
  size?: InputSize;
  error?: string;
  hint?: string;
  required?: boolean;
  disabled?: boolean;
  id?: string;
  className?: string;
}) => {
  const generatedId = useId();
  const id = providedId || generatedId;

  return (
    <InputContext.Provider value={{ id, variant, size, error, hint, required, disabled }}>
      <div className={[styles['input-container'], className].filter(Boolean).join(' ')}>
        {children}
      </div>
    </InputContext.Provider>
  );
};

export const InputLabel = ({ children, className }: { children: React.ReactNode; className?: string }) => {
  const { id, required } = useInputContext();
  return (
    <label htmlFor={id} className={[styles.label, className].filter(Boolean).join(' ')}>
      {children}
      {required && <span className={styles.required} aria-hidden="true">*</span>}
    </label>
  );
};

export const InputField = React.forwardRef<HTMLInputElement, Omit<React.InputHTMLAttributes<HTMLInputElement>, 'size'>>(
  ({ className, type = 'text', ...props }, ref) => {
    const { id, variant, size, error, hint, disabled, required } = useInputContext();
    const [showPassword, setShowPassword] = useState(false);
    const isPassword = type === 'password';
    const inputType = isPassword ? (showPassword ? 'text' : 'password') : type;

    const cls = [
      styles.input,
      styles[\`input--\${variant}\`],
      styles[\`input--\${size}\`],
      error && styles['input--error'],
      disabled && styles['input--disabled'],
      className,
    ].filter(Boolean).join(' ');

    const describedBy = [
      error ? \`\${id}-error\` : null,
      hint ? \`\${id}-hint\` : null,
    ].filter(Boolean).join(' ') || undefined;

    return (
      <div className={styles['input-wrapper']}>
        <input
          ref={ref}
          id={id}
          type={inputType}
          className={cls}
          aria-invalid={!!error}
          aria-required={required}
          aria-describedby={describedBy}
          disabled={disabled}
          {...props}
        />
        {isPassword && (
          <button
            type="button"
            className={styles['password-toggle']}
            onClick={() => setShowPassword(!showPassword)}
            aria-label={showPassword ? 'Hide password' : 'Show password'}
            aria-pressed={showPassword}
          >
            {showPassword ? 'Hide' : 'Show'}
          </button>
        )}
      </div>
    );
  }
);

export const InputError = ({ children, className }: { children: React.ReactNode; className?: string }) => {
  const { id } = useInputContext();
  return (
    <span id={\`\${id}-error\`} className={[styles.error, className].filter(Boolean).join(' ')} role="alert">
      {children}
    </span>
  );
};

export const InputHint = ({ children, className }: { children: React.ReactNode; className?: string }) => {
  const { id } = useInputContext();
  return (
    <span id={\`\${id}-hint\`} className={[styles.hint, className].filter(Boolean).join(' ')}>
      {children}
    </span>
  );
};

export const Input = Object.assign(InputRoot, {
  Label: InputLabel,
  Field: InputField,
  Error: InputError,
  Hint: InputHint,
});

Input.displayName = 'Input';
InputRoot.displayName = 'Input.Root';
InputLabel.displayName = 'Input.Label';
InputField.displayName = 'Input.Field';
InputError.displayName = 'Input.Error';
InputHint.displayName = 'Input.Hint';
"
`;

exports[`Input snapshots > css mode snapshot 2`] = `
"/* Generated by Crucible — edit freely, re-generate with --force */

.input-container {
  display:        flex;
  flex-direction: column;
  gap:            var(--spacing-unit);
  width:          100%;
}

.input-label, .label {
  font-family: var(--font-family);
  font-size:   0.875rem;
  font-weight: 500;
  color:       var(--color-text);
  margin-bottom: calc(var(--spacing-unit) * 1.5);
}

.input-required, .required {
  color:       var(--color-destructive);
  margin-left: calc(var(--spacing-unit) * 0.5);
}

.input-wrapper {
  position: relative;
  width:    100%;
}

.input {
  --input-height: calc(var(--spacing-unit) * 10);
  --input-radius: var(--radius-md);
  --input-border: var(--color-border);
  --input-transition: border-color 0.2s ease, box-shadow 0.2s ease;

  width:           100%;
  font-family:     var(--font-family);
  border:          1px solid var(--input-border);
  border-radius:   var(--input-radius);
  background:      var(--color-surface);
  color:           var(--color-text);
  transition:      var(--input-transition);
  box-sizing:      border-box;
}

.input:focus-visible {
  outline: none;
  border-color: var(--color-primary);
  box-shadow: 0 0 0 2px var(--color-background), 0 0 0 4px var(--color-primary);
}

/* Sizes */
.input--sm { 
  min-height: var(--input-height);
  padding:    0 calc(var(--spacing-unit) * 3);
  font-size:  0.875rem; 
}
.input--md { 
  min-height: var(--input-height);
  padding:    0 calc(var(--spacing-unit) * 3);
  font-size:  1rem; 
}
.input--lg { 
  min-height: var(--input-height);
  padding:    0 calc(var(--spacing-unit) * 3);
  font-size:  1.125rem; 
}

/* Variants */
.input--error {
  border-color: var(--color-destructive);
}

.input--disabled {
  background: var(--color-background);
  cursor:     not-allowed;
  opacity:    0.7;
}

.input-password-toggle, .password-toggle {
  position:   absolute;
  right:      12px;
  top:        50%;
  transform:  translateY(-50%);
  background: transparent;
  border:     none;
  padding:    0;
  margin:     0;
  font-family: var(--font-family);
  font-size:  12px;
  color:      var(--color-text-muted);
  cursor:     pointer;
}

.input-password-toggle:hover, .password-toggle:hover {
  color: var(--color-text);
}

.input-password-toggle:focus-visible, .password-toggle:focus-visible {
  outline:        2px solid var(--color-primary);
  outline-offset: 3px;
  border-radius:  var(--radius-sm);
}

.input-hint, .input-error, .hint, .error {
  font-family: var(--font-family);
  font-size:   12px;
  margin-top:  2px;
}

.input-hint, .hint {
  color: var(--color-text-muted);
}

.input-error, .error {
  color: var(--color-destructive);
}

.input[type="password"],
.input[type="text"]:has(+ .password-toggle) {
  padding-right: 48px;
}
"
`;

exports[`Input snapshots > css mode snapshot 3`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Input } from './Input';

const meta: Meta<typeof Input> = {
  title: 'Crucible/Input',
  component: Input,
  parameters: { layout: 'centered' },
  argTypes: {
    variant:  { control: 'select', options: ['default', 'error'] },
    size:     { control: 'select', options: ['sm', 'md', 'lg'] },
    disabled: { control: 'boolean' },
    required: { control: 'boolean' },
  },
};
export default meta;
type Story = StoryObj<typeof Input>;

export const Default: Story = {
  args: { variant: 'default', size: 'md' },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Username</Input.Label>
      <Input.Field placeholder="Enter your username" />
    </Input>
  ),
};

export const Error: Story = {
  args: { variant: 'error' },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Error Variant</Input.Label>
      <Input.Field placeholder="Input with error variant" />
    </Input>
  ),
};

export const Sm: Story = {
  args: { size: 'sm' },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Sm Size</Input.Label>
      <Input.Field placeholder="Input with sm size" />
    </Input>
  ),
};
export const Md: Story = {
  args: { size: 'md' },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Md Size</Input.Label>
      <Input.Field placeholder="Input with md size" />
    </Input>
  ),
};
export const Lg: Story = {
  args: { size: 'lg' },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Lg Size</Input.Label>
      <Input.Field placeholder="Input with lg size" />
    </Input>
  ),
};

export const WithError: Story = {
  args: { error: 'Invalid email address' },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Email</Input.Label>
      <Input.Field defaultValue="invalid-email" />
      <Input.Error>{args.error}</Input.Error>
    </Input>
  ),
};

export const WithHint: Story = {
  args: { hint: 'Must be at least 8 characters long' },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Password</Input.Label>
      <Input.Field type="password" placeholder="Enter password" />
      <Input.Hint>{args.hint}</Input.Hint>
    </Input>
  ),
};

export const Disabled: Story = {
  args: { disabled: true },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Account ID</Input.Label>
      <Input.Field value="ACC-12345" readOnly />
    </Input>
  ),
};

export const Required: Story = {
  args: { required: true },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Full Name</Input.Label>
      <Input.Field placeholder="Jane Doe" />
    </Input>
  ),
};
"
`;

exports[`Input snapshots > tailwind mode snapshot 1`] = `
"import React, { useId, useState, createContext, useContext } from 'react';

const variantClasses: Record<string, string> = {
  default: 'bg-[var(--color-surface)] border-[var(--color-border)] focus:border-[var(--color-primary)]',
  error: 'bg-[var(--color-surface)] border-[var(--color-destructive)] focus:border-[var(--color-destructive)]',
 };
const sizeClasses: Record<string, string> = {
  sm: 'px-3 py-1.5 text-sm',
  md: 'px-4 py-2 text-base',
  lg: 'px-5 py-3 text-lg',
};

export type InputVariant = 'default' | 'error';
export type InputSize    = 'sm' | 'md' | 'lg';

export interface InputProps extends Omit<React.InputHTMLAttributes<HTMLInputElement>, 'size'> {
  label?:    string;
  variant?:  InputVariant;
  size?:     InputSize;
  error?:    string;
  hint?:     string;
  required?: boolean;
}

interface InputContextValue {
  id: string;
  variant: InputVariant;
  size: InputSize;
  error?: string;
  hint?: string;
  required?: boolean;
  disabled?: boolean;
}

const InputContext = createContext<InputContextValue | undefined>(undefined);

const useInputContext = () => {
  const context = useContext(InputContext);
  if (!context) throw new Error('Input sub-components must be used within Input');
  return context;
};

export const InputRoot = ({
  children,
  variant = 'default',
  size = 'md',
  error,
  hint,
  required,
  disabled,
  id: providedId,
  className,
}: {
  children: React.ReactNode;
  variant?: InputVariant;
  size?: InputSize;
  error?: string;
  hint?: string;
  required?: boolean;
  disabled?: boolean;
  id?: string;
  className?: string;
}) => {
  const generatedId = useId();
  const id = providedId || generatedId;

  return (
    <InputContext.Provider value={{ id, variant, size, error, hint, required, disabled }}>
      <div className={['flex flex-col gap-[var(--spacing-unit)] w-full', className].filter(Boolean).join(' ')}>
        {children}
      </div>
    </InputContext.Provider>
  );
};

export const InputLabel = ({ children, className }: { children: React.ReactNode; className?: string }) => {
  const { id, required } = useInputContext();
  return (
    <label htmlFor={id} className={['font-medium text-[var(--color-text)] text-sm', className].filter(Boolean).join(' ')}>
      {children}
      {required && <span className="text-[var(--color-destructive)] ml-1" aria-hidden="true">*</span>}
    </label>
  );
};

export const InputField = React.forwardRef<HTMLInputElement, Omit<React.InputHTMLAttributes<HTMLInputElement>, 'size'>>(
  ({ className, type = 'text', ...props }, ref) => {
    const { id, variant, size, error, hint, disabled, required } = useInputContext();
    const [showPassword, setShowPassword] = useState(false);
    const isPassword = type === 'password';
    const inputType = isPassword ? (showPassword ? 'text' : 'password') : type;

    const cls = [
      'w-full border-[1.5px] rounded-[var(--radius-md)] outline-none transition-all',
      'focus-visible:ring-2 focus-visible:ring-[var(--color-primary)] focus-visible:ring-offset-2 outline-none',
      'disabled:opacity-50 disabled:cursor-not-allowed',
      variantClasses[variant],
      sizeClasses[size],
      isPassword && 'pr-12',
      error && 'border-[var(--color-destructive)]',
      className,
    ].filter(Boolean).join(' ');

    const describedBy = [
      error ? \`\${id}-error\` : null,
      hint ? \`\${id}-hint\` : null,
    ].filter(Boolean).join(' ') || undefined;

    return (
      <div className="relative w-full">
        <input
          ref={ref}
          id={id}
          type={inputType}
          className={cls}
          aria-invalid={!!error}
          aria-required={required}
          aria-describedby={describedBy}
          disabled={disabled}
          {...props}
        />
        {isPassword && (
          <button
            type="button"
            className="absolute right-3 top-1/2 -translate-y-1/2 text-sm text-[var(--color-text-muted)] hover:text-[var(--color-text)] focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-primary)] rounded-sm"
            onClick={() => setShowPassword(!showPassword)}
            aria-label={showPassword ? 'Hide password' : 'Show password'}
            aria-pressed={showPassword}
          >
            {showPassword ? 'Hide' : 'Show'}
          </button>
        )}
      </div>
    );
  }
);

export const InputError = ({ children, className }: { children: React.ReactNode; className?: string }) => {
  const { id } = useInputContext();
  return (
    <span id={\`\${id}-error\`} className={['text-xs text-[var(--color-destructive)]', className].filter(Boolean).join(' ')} role="alert">
      {children}
    </span>
  );
};

export const InputHint = ({ children, className }: { children: React.ReactNode; className?: string }) => {
  const { id } = useInputContext();
  return (
    <span id={\`\${id}-hint\`} className={['text-xs text-[var(--color-text-muted)]', className].filter(Boolean).join(' ')}>
      {children}
    </span>
  );
};

export const Input = Object.assign(InputRoot, {
  Label: InputLabel,
  Field: InputField,
  Error: InputError,
  Hint: InputHint,
});

Input.displayName = 'Input';
InputRoot.displayName = 'Input.Root';
InputLabel.displayName = 'Input.Label';
InputField.displayName = 'Input.Field';
InputError.displayName = 'Input.Error';
InputHint.displayName = 'Input.Hint';
"
`;

exports[`Input snapshots > tailwind mode snapshot 2`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Input } from './Input';

const meta: Meta<typeof Input> = {
  title: 'Crucible/Input',
  component: Input,
  parameters: { layout: 'centered' },
  argTypes: {
    variant:  { control: 'select', options: ['default', 'error'] },
    size:     { control: 'select', options: ['sm', 'md', 'lg'] },
    disabled: { control: 'boolean' },
    required: { control: 'boolean' },
  },
};
export default meta;
type Story = StoryObj<typeof Input>;

export const Default: Story = {
  args: { variant: 'default', size: 'md' },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Username</Input.Label>
      <Input.Field placeholder="Enter your username" />
    </Input>
  ),
};

export const Error: Story = {
  args: { variant: 'error' },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Error Variant</Input.Label>
      <Input.Field placeholder="Input with error variant" />
    </Input>
  ),
};

export const Sm: Story = {
  args: { size: 'sm' },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Sm Size</Input.Label>
      <Input.Field placeholder="Input with sm size" />
    </Input>
  ),
};
export const Md: Story = {
  args: { size: 'md' },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Md Size</Input.Label>
      <Input.Field placeholder="Input with md size" />
    </Input>
  ),
};
export const Lg: Story = {
  args: { size: 'lg' },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Lg Size</Input.Label>
      <Input.Field placeholder="Input with lg size" />
    </Input>
  ),
};

export const WithError: Story = {
  args: { error: 'Invalid email address' },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Email</Input.Label>
      <Input.Field defaultValue="invalid-email" />
      <Input.Error>{args.error}</Input.Error>
    </Input>
  ),
};

export const WithHint: Story = {
  args: { hint: 'Must be at least 8 characters long' },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Password</Input.Label>
      <Input.Field type="password" placeholder="Enter password" />
      <Input.Hint>{args.hint}</Input.Hint>
    </Input>
  ),
};

export const Disabled: Story = {
  args: { disabled: true },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Account ID</Input.Label>
      <Input.Field value="ACC-12345" readOnly />
    </Input>
  ),
};

export const Required: Story = {
  args: { required: true },
  render: (args) => (
    <Input {...args}>
      <Input.Label>Full Name</Input.Label>
      <Input.Field placeholder="Jane Doe" />
    </Input>
  ),
};
"
`;
